# mizuba

./: .clang-tidy  CMakeLists.txt  README.md  codecov.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: main.yml
mizuba/: CMakeLists.txt  __init__.py  _dl_utils.py  _logging.py  _sgp4_polyjectory.py  _version.py.in  common_utils.cpp  common_utils.hpp  conjunctions.cpp  conjunctions.hpp  conjunctions_broad_phase.cpp  conjunctions_bvh.cpp  conjunctions_compute_aabbs.cpp  conjunctions_extend.cpp  conjunctions_morton.cpp  conjunctions_narrow_phase.cpp  core.cpp  detect_conjunctions.cpp  detect_conjunctions_aabbs.cpp  detect_conjunctions_broad_phase.cpp  detect_conjunctions_bvh.cpp  detect_conjunctions_morton.cpp  detect_conjunctions_narrow_phase.cpp  expose_conjunctions.cpp  expose_conjunctions.hpp  expose_make_sgp4_polyjectory.cpp  expose_make_sgp4_polyjectory.hpp  expose_polyjectory.cpp  expose_polyjectory.hpp  half.hpp  logging.cpp  logging.hpp  make_sgp4_polyjectory.cpp  make_sgp4_polyjectory.hpp  mdspan.hpp  poly_trajectory.cpp  poly_trajectory.hpp  polyjectory.cpp  polyjectory.hpp  sgp4_polyjectory.cpp  (+3 more)
mizuba/data_sources/: __init__.py  _celestrak.py  _common.py  _spacetrack.py
mizuba/detail/: atomic_minmax.hpp  conjunctions_jit.cpp  conjunctions_jit.hpp  dfloat_utils.hpp  file_utils.cpp  file_utils.hpp  fmv_attributes.hpp  get_n_effective_objects.hpp  ival.hpp  poly_utils.cpp  poly_utils.hpp
mizuba/detail/sgp4/: SGP4_fix.cpp
mizuba/test/: __init__.py  _planar_circ.py  _sample_spacetrack_json.py  _sgp4_test_data_202407.py  _sgp4_test_data_202409.py  disc_gpe_01.parquet  full_catalog.parquet  iss_gpes.parquet  multi_gpes.parquet  single_gpe.parquet  single_gpe_ds.parquet  strack_20240705.parquet  strack_20240917.parquet  syncom_gpe.parquet  test_boundary_conjunctions.py  test_conjunctions.py  test_data_sources.py  test_heyoka_conjunctions.py  test_make_sgp4_polyjectory.py  test_polyjectory.py  test_sgp4_polyjectory.py  test_tmpdir.py
tools/: conda.sh  conda_asan.sh  conda_clang_tidy.sh  conda_coverage.sh  gha_conda_asan.sh  gha_manylinux.sh
validation/: celestrak_on_orbit_20241101.py  celestrak_on_orbit_20241101_consistency.py  sgp4_full_catalog.py
validation/data/: celestrak_on_orbit_20241101.csv
