[build-system]
build-backend = 'scikit_build_core.build'
requires = ['scikit-build-core']

[project]
name = 'mizuba'
version = '0.0.3'
description = "Python library for fast conjunction detection in orbital environments"
readme = 'README.md'
requires-python = '>=3.7'
dependencies = ['numpy']
authors = [{ name = 'Francesco Biscarni', email = 'bluescarni@gmail.com' }]
license = { text = 'MPL-2.0' }
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
keywords = ['science', 'math', 'physics', 'astrodynamics', 'aerospace']

[project.urls]
Documentation = "https://github.com/bluescarni/mizuba"
Repository = "https://github.com/bluescarni/mizuba"

[project.optional-dependencies]
sgp4 = ["skyfield", "pandas"]
heyoka = ["heyoka >= 6.1.0, < 7"]

[tool.scikit-build]
# Avoid copying the C++ source files when building
# binary wheels.
wheel.packages = []
# Enable IPO.
cmake.define.MIZUBA_ENABLE_IPO = "ON"
# Custom install path setting.
cmake.define.MIZUBA_INSTALL_PATH = "."
