[build-system]
build-backend = 'scikit_build_core.build'
requires = ['scikit-build-core']

[project]
name = 'mizuba'
version = '0.0.8'
description = "Python library for fast conjunction detection in orbital environments"
readme = 'README.md'
requires-python = '>=3.9'
dependencies = ['numpy', 'polars', 'requests', 'astropy']
authors = [{ name = 'Francesco Biscarni', email = 'bluescarni@gmail.com' }]
license = { text = 'AGPL-3.0-or-later' }
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
keywords = ['science', 'math', 'physics', 'astrodynamics', 'aerospace']

[project.urls]
Documentation = "https://github.com/bluescarni/mizuba"
Repository = "https://github.com/bluescarni/mizuba"

[project.optional-dependencies]
sgp4 = ["sgp4"]
heyoka = ["heyoka >= 7.2.1, < 8"]

[tool.scikit-build]
# Avoid copying the C++ source files when building
# binary wheels.
wheel.packages = []
# Enable IPO.
cmake.define.MIZUBA_ENABLE_IPO = "ON"
# Custom install path setting.
cmake.define.MIZUBA_INSTALL_PATH = "."
# Exclude certain test data files from the wheel in order
# to curb the size.
wheel.exclude = ["strack_*.parquet", "full_catalog.parquet"]
